<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:background="@color/white"
    >
    
         <Button
        android:id="@+id/button1"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:background="@color/sp_green"
        android:height="10sp"
        android:width="80sp"
        android:text="@string/add_to_party_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button1"
        android:paddingBottom="2sp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/song_name" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/song"
        android:layout_below="@+id/song"
        android:paddingBottom="4sp"
        android:text="@string/artist_name"
        android:textColor="#808080"
        android:textSize="14sp" />

   
</RelativeLayout>