<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:background="@color/white"
    >
    
        <Button
        android:id="@+id/re_join_saved_party"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="5sp"
        android:background="@color/sp_green"
        android:height="10sp"
        android:width="80sp"
        android:text="@string/join_saved_party_button_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        android:onClick="clickJoinParty" />
    
    <TextView
        android:id="@+id/party_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/re_join_saved_party"
        android:paddingBottom="2sp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/saved_party_name" />

    <TextView
        android:id="@+id/party_date_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/party_name"
        android:layout_below="@+id/party_name"
        android:paddingBottom="4sp"
        android:text="@string/party_date_saved"
        android:textColor="#808080"
        android:textSize="14sp" />

   
</RelativeLayout>