<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/create_new_party_button"
        android:name="clickCreateParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sp_green"
        android:layout_marginBottom="30dip"
        android:onClick="clickCreateParty"
        android:text="@string/create_a_new_party_button_title" />

    <Button
        android:id="@+id/join_party_button"
        android:name="clickJoinParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/sp_green"
        android:onClick="clickJoinParty"
        android:text="@string/join_a_party_button_title" />

    <include
        android:id="@+id/joinFrame"
        layout="@layout/join_party"
        android:visibility="gone" />


    <Button
        android:id="@+id/active_party_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sp_green"
        android:layout_marginTop="5dp"
        android:onClick=""
        android:text="@string/active_party" />


</LinearLayout>