<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/partyhelpview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/sp_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="3sp"
        android:text="@string/party_help"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/party_help_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/partyhelpview"
        android:text="@string/create_party_help" 
        android:padding="5sp"/>
    
    <TextView
        android:id="@+id/search_help_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/party_help_text_view"
        android:background="@color/sp_green"
        android:padding="3sp"
        android:text="@string/search_help"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/search_help_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_help_view"
        android:text="@string/create_party_help" 
        android:padding="5sp"/>
</RelativeLayout>
</ScrollView>